--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ ul {
   margin: 0;
 }
 
+p, a, th, td, span {
+  font-size: 14px;
+  line-height: 1.2em;
+}
 /*
  *
  * Common
@@ -61,16 +65,16 @@ ul {
 }
 
 .header__logo {
-  height: 60px;
-  margin-right: 1em;
+  height: 50px;
+  margin-right: 0.1em;
   vertical-align: top;
   margin-top: 12px;
 }
 
 .header__title {
   font-weight: 300;
-  font-size: 2em;
-  margin: 0.7em 0.2em;
+  font-size: 1.8em;
+  margin: 0.9em 0.2em;
   display: inline-block;
   color: #212121;
 }
@@ -166,7 +170,7 @@ nav a:hover {
  */
 main {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  /* width: 100%; */
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -206,6 +210,10 @@ main {
   padding: 1em;
 }
 
+.hero-details {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 /*
  *
  * Top News
@@ -259,7 +267,6 @@ main {
 
 .scores {
   width: 100%;
-  /* float: left; */
   padding-top: 1em;
 }
 
@@ -307,7 +314,6 @@ main {
  */
 
 .weather {
-  /* float: right; */
   width: 100%;
   max-width: 820px;
   padding: 1em;
@@ -364,13 +370,15 @@ main {
  */
 
 .recent-news {
+  max-width: 100%;
   clear: both;
   padding: 1em;
 }
 
 .snippet {
   clear: both;
-  margin: 24px 0;
+  height: 100px;
+  margin: 24px 10px;
 }
 
 .snippet__thumbnail {
@@ -393,30 +401,45 @@ main {
   text-decoration: underline;
 }
 
-/*
- *
- * Responsive Layout
- *
- */
 
-@media screen and (min-width: 800px) {
-  .header__logo {height: 72px;}
-  .header__title {font-size: 4em;}
-  nav {width: 100%; height: auto; position: static; margin-left: auto; margin-right: auto; transform: none;}
-  .nav__item {width: 24%; display: inline-block;}
-  #nav-icon {display: none;}
-  .hero {width: 60%; order: -3;}
-  .weather {width: 40%; order: -2;}
-  .top-news {width: 100%; order: -1;}
-  .scores {width: 100%;}
+/* styles for snippet details ... */
+.block-with-text {
+  /* hide text if it more than N lines  */
+  overflow: hidden;
+  /* for set '...' in absolute position */
+  position: relative;
+  /* max-height = line-height (1.2) * lines max number (4) - 0.2em */
+  max-height: 4.6em;
+  /* fix problem when last visible word doesn't adjoin right side  */
+  text-align: justify;
+  /* place for '...' */
+  margin-right: -1em;
+  padding-right: 1em;
 }
-
-@media screen and (min-width: 1100px) {
-  .content, nav {width: 1100px; margin-left: auto; margin-right: auto;}
-  .hero {width: 60%; order: -3;}
-  .top-news {width: 40%; order: -2;}
-  .scores {width: 60%; order: -1;}
-  .weather {width: 40%; order: 0;}
+/* create the ... */
+.block-with-text:before {
+  /* points in the end */
+  content: '...';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of block */
+  right: 0;
+  bottom: 0;
+}
+/* hide ... if we have text, which is less than or equal to max lines */
+.block-with-text:after {
+  /* points in the end */
+  content: '';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of text */
+  right: 0;
+  /* set width and height */
+  width: 1em;
+  height: 1em;
+  margin-top: 0.2em;
+  /* bg color = bg color under block */
+  background: white;
 }
 
 /*
